--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
     <title>Simple Map</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=GOOGLE_MAPS_API_KEY&callback=initMap&libraries=&v=weekly"
+      src="https://maps.googleapis.com/maps/api/js?key=${{GOOGLE_MAPS_API_KEY}}&callback=initMap&libraries=&v=weekly"
       defer
     ></script>
     <link rel="stylesheet" type="text/css" href="./trial.css" />
